# fm_smoov

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  MsgBroker.cpp  MsgBroker.h  audiod.mk  audiod.project  build_and_run.sh  build_fltk.sh  build_fmsmoov.sh  fmsmoovd.project  install_dependencies.sh  install_fltk.sh
code_recycle_pile/: command.pb.cc  fft.h  protocol_lws_minimal.cpp  websocket_server.cpp  websocket_server.h
dsp_lab/: agc.m  biquad.cc  biquad.h  compute_lr_filter.m  crossover.cpp  crossover_sos_data.txt  dynamics_compress.m  filter.cc  filter.h  filter_biquad_worksheet.m  fm_smoov_dsp_lab  main.m  main.m.orig  make_filters.m  multiband_split.m  oct_agc.cpp  oct_gs.cpp  oct_lin2log.cpp  oct_log2lin.cpp  oct_sc.cpp  oct_stereo_enhance.cpp  spectrum_analyzer.m
fmsmoov_ui/: CMakeLists.txt  fmsmoov_ui.project
fmsmoov_ui/hdr/: Fl_Tone_Gen.h  logger.h
fmsmoov_ui/src/: Fl_Tone_Gen.cpp  logger.cpp  main.cpp
hdr/: audio_hub.h  audio_params.h  biquad.h  command_handler.h  device_db.h  logger.h  pcm_capture.h  pcm_device.h  pcm_out.h  pcm_playback.h  pcm_transfer_interface.h  processor.h  processor_analyzer.h  processor_filter_1st_order.h  processor_lpf.h  processor_simple_gain.h  processor_slow_agc.h  soundfile.h  stream_capture.h  tone_generator.h
html/: fmsmoov.css  fmsmoov.html  fmsmoov.js  index-old.html  package-lock.json  package.json  package_real.json  webpack.config.js
include/: CommandHandler.h  MsgBroker.h  Prefs.h  ProcessorMain.h  ProcessorPlugin.h  agc.h  agc_2_band.h  apf_200hz.h  audio_buffer.h  audio_buffer.h.orig  audiobuf.h  biquad.h  circbuf.h  cmd_server.h  command.pb.h  command_server.h  compressor.h  crossover.h  crossover_6_band.h  crossover_twoband.h  delay_line.h  fft.h  filter.h  filter3sos.h  filter_lr4.h  filter_old.h  fm_smoov.h  gain.h  gate.h  generic_delay.h  hpf_30hz.h  limiter_6_band.h  linlog.h  lpf_15khz.h  ncui.h  parametric_biquad.h  parametric_filter.h  pcm_device.h  pcm_device_capture.h  pcm_device_playback.h  (+30 more)
proto/: compile_protos.sh  fmsmoov.pb.cc  (+2 more)
(+97 files in other folders)
